src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Media Lead</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Awaiting answer</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified %28Converted%29</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting answer</fullName>
        </values>
        <values>
            <fullName>Lead Closed - Carrying</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified %28Converted%29</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Wowcher</fullName>
        <description>Wowcher Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Lead Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Lead Closed - Discarded</fullName>
        </values>
        <values>
            <fullName>Lead Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_By__c</fullName>
        <label>Book By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Product__c</fullName>
        <label>Deal Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FoodBeverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeEssentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeGarden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Main_Category__c</fullName>
        <label>Classified - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homes &amp; Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noticeboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Minor_Category__c</fullName>
        <label>Classified - Minor Category</label>
        <picklist>
            <controllingField>Classified_Main_Category__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories &amp; Soft Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balearics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesses For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical &amp; Secretarial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories, Lofts &amp; Extensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; Tenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotswolds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Classified_Sub_Category__c</fullName>
        <label>Classified - Sub Category</label>
        <picklist>
            <controllingField>Classified_Main_Category__c</controllingField>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Motors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Property)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;B/Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bars/Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battlefields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Births, Deaths and Marriages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business to Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping &amp; Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans &amp; Motorhomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars wanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collectables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Therapies &amp; Wellbeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conferences</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Close_Reason_Description__c</fullName>
        <label>Close Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <inlineHelpText>Please enter a reason this lead was not converted.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Mono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>City Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Saturday- Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Listings/ Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Weekend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday (B/t)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday - Review (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday(B/bl)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday - Observer Mag (A4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Scout: used internally</description>
        <label>Data Scout Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data Scout: synchronize Lead data with Bean</description>
        <inlineHelpText>Data Scout: synchronize Lead data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Classifications__c</fullName>
        <label>Demo Classifications</label>
        <picklist>
            <picklistValues>
                <fullName>Data Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrichment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Demo ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Publication__c</fullName>
        <label>Date of Deal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Link__c</fullName>
        <description>Link to the deal</description>
        <inlineHelpText>Please enter the web address of the deal.</inlineHelpText>
        <label>Deal Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deal_Selling_Price__c</fullName>
        <label>Deal Selling Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Buying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H.R.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Wowcher__c</fullName>
        <label>Wowcher Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Merchant - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant - Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LivingSocial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Break 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Break 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coventry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Cities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grimsby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hull and East Riding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipswich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Reason for not Qualifying</label>
        <picklist>
            <picklistValues>
                <fullName>Activity Already Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Discussed As Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Pullled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business titles only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Date moved Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Use Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Use Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial / Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free/House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free/House Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idea Not Suited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Already Exists As Account/Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to A&amp;N Media Brand Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to DR / Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro not core to activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed a tactical opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Campaign Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Creative Solutions Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not core to activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pops only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong target audience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>